# plexar

./: README.md  index.html  plexar-overview.html  pyproject.toml
plexar/: inventory.example.yaml  pyproject.toml
plexar/.github/workflows/: ci.yml  network-ci.yml
plexar/config/: diff.py  transaction.py  validator.py
plexar/core/: device.py  exceptions.py  network.py  pool.py
plexar/drivers/: base.py  registry.py
plexar/models/: __init__.py
plexar/parsers/templates/: nxos_show_interface.ttp
plexar/plexar/: __init__.py
plexar/plexar/ai/: __init__.py  parser.py  query.py  rca.py
plexar/plexar/cli/: __init__.py  main.py
plexar/plexar/core/: __init__.py  credentials.py  device.py  enums.py  inventory.py
plexar/plexar/discovery/: models.py
plexar/plexar/drivers/: mock.py
plexar/plexar/integrations/: __init__.py
plexar/plexar/integrations/nautobot/: __init__.py  inventory.py
plexar/plexar/integrations/netbox/: __init__.py  inventory.py
plexar/plexar/integrations/opentelemetry/: __init__.py  exporter.py
plexar/plexar/intent/: __init__.py  compiler.py  engine.py  primitives.py  verifier.py
plexar/plexar/models/: bgp.py  interfaces.py  platform.py  routing.py
plexar/plexar/parsers/: base.py
plexar/plexar/plugins/: __init__.py  sdk.py
plexar/plexar/reporting/: __init__.py  engine.py
plexar/plexar/security/: __init__.py  audit.py  rbac.py  sanitizer.py  secrets.py  tls.py
plexar/plexar/state/: snapshot.py
plexar/plexar/telemetry/: __init__.py  events.py  gnmi.py
plexar/plexar/topology/: __init__.py  graph.py  lldp.py
plexar/plexar/twin/: __init__.py  simulator.py
plexar/plexar/utils/: retry.py
plexar/plexar/vendors/cisco/: ios.py
plexar/state/: drift.py
plexar/tests/unit/ai/: test_parser_rca.py
plexar/tests/unit/config/: test_diff.py  test_transaction.py
plexar/tests/unit/intent/: test_compiler.py  test_engine.py
plexar/tests/unit/plugins/: test_sdk.py
plexar/tests/unit/reporting/: test_engine.py
plexar/tests/unit/security/: test_audit_rbac.py  test_sanitizer.py
plexar/tests/unit/state/: test_snapshot.py
plexar/tests/unit/telemetry/: test_events.py
plexar/tests/unit/topology/: test_graph.py
plexar/tests/unit/twin/: test_simulator.py
plexar/vendors/arista/: eos.py
plexar/vendors/cisco/: nxos.py
plexar/vendors/juniper/: junos.py
tests/unit/: test_device.py  test_inventory.py  test_mock_driver.py
tests/unit/config/: test_validator.py
